--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "jsonlang"
-version = "0.2.3"
+name = "jlang"
+version = "0.3.0"
 edition = "2021"
 
 [dependencies]
+lazy_static = "1.5.0"
 regex = "1.11.1"
 serde_json = "1.0"
+toml = "0.8.22"
