--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "JiLang"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 
 [dependencies]
 lazy_static = "1.5.0"
 regex = "1.11.1"
 serde_json = "1.0"
-toml = "0.8.22"
+dotenv = "0.15.0"
