--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "JiLang"
-version = "0.3.2"
+version = "0.4.0"
 edition = "2021"
 
 [dependencies]
@@ -8,3 +8,4 @@ lazy_static = "1.5.0"
 regex = "1.11.1"
 serde_json = "1.0"
 dotenv = "0.15.0"
+mlua = { version = "0.8", features = ["lua54", "vendored"] }
